feat:管理員後台 新增設備 API (/v1/admin/new-machine)
