# bootstrap/app.php
@@ -35,7 +35,11 @@ return Application::configure(basePath: dirname(__DIR__))
             }
         });
         $exceptions->render(function (AuthenticationException $e, Request $request) {
-            $needTokenPath = ['/v1/user/getuserinfo','/v1/admin/getuserlist'];
+            $needTokenPath = [
+                '/v1/user/getuserinfo',
+                '/v1/admin/getuserlist',
+                '/v1/admin/new-machine'
+            ];
             if ($request->header('Accept') != 'application/json' && in_array($request->getRequestUri(), $needTokenPath)) {
                 return response()->json([
                     'error' => 'type error',
